; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23154.c_xp_evilstring.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_23154.c_xp_evilstring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xp_evilstring.buffer = internal global [635 x i8] zeroinitializer, align 16
@sc = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xp_evilstring(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i8* getelementptr inbounds ([635 x i8], [635 x i8]* @xp_evilstring.buffer, i64 0, i64 0), i8** %6, align 8
  %7 = load i32, i32* %3, align 4
  %8 = sub nsw i32 %7, 12
  %9 = sext i32 %8 to i64
  %10 = inttoptr i64 %9 to i32*
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to i32**
  store i32* %10, i32** %12, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 4
  store i8* %14, i8** %6, align 8
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = inttoptr i64 %16 to i32*
  %18 = load i8*, i8** %6, align 8
  %19 = bitcast i8* %18 to i32**
  store i32* %17, i32** %19, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 4
  store i8* %21, i8** %6, align 8
  %22 = load i8*, i8** %6, align 8
  store i8 10, i8* %22, align 1
  %23 = load i8*, i8** %6, align 8
  %24 = getelementptr inbounds i8, i8* %23, i32 1
  store i8* %24, i8** %6, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = load i8*, i8** @sc, align 8
  %27 = load i8*, i8** @sc, align 8
  %28 = call i32 @strlen(i8* %27)
  %29 = call i32 @memcpy(i8* %25, i8* %26, i32 %28)
  %30 = load i8*, i8** @sc, align 8
  %31 = call i32 @strlen(i8* %30)
  %32 = load i8*, i8** %6, align 8
  %33 = sext i32 %31 to i64
  %34 = getelementptr inbounds i8, i8* %32, i64 %33
  store i8* %34, i8** %6, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = load i8*, i8** @sc, align 8
  %37 = call i32 @strlen(i8* %36)
  %38 = add nsw i32 %37, 4
  %39 = add nsw i32 %38, 4
  %40 = sext i32 %39 to i64
  %41 = sub i64 635, %40
  %42 = trunc i64 %41 to i32
  %43 = call i32 @memset(i8* %35, i8 signext 66, i32 %42)
  store i8 0, i8* getelementptr inbounds ([635 x i8], [635 x i8]* @xp_evilstring.buffer, i64 1, i64 0), align 1
  store i8* getelementptr inbounds ([635 x i8], [635 x i8]* @xp_evilstring.buffer, i64 0, i64 0), i8** %6, align 8
  %44 = load i8*, i8** %6, align 8
  %45 = call i32 @strlen(i8* %44)
  store i32 %45, i32* %5, align 4
  %46 = load i8*, i8** %6, align 8
  ret i8* %46
}

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
